--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ongkir
+name: Ongkir
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
@@ -16,6 +16,12 @@ dependencies:
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
+  flutter_launcher_icons: "^0.9.2"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 flutter: 
   uses-material-design: true
